--- a/_config.yml
+++ b/_config.yml
@@ -53,8 +53,9 @@ social:
 address:
   - line: New York, New York
 
-#Posting
+#Posting and timezones
 future: true
+timezone: UTC+5
 
 # Credits content
 credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
