--- a/_config.yml
+++ b/_config.yml
@@ -39,15 +39,15 @@ footer:
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: twitter
-    url: http://twitter.com/jekyllrb
+    url: 
   - title: facebook
     url:
   - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
+    url: http://stackoverflow.com/users/7100594/mr-martinsosa
   - title: bitbucket
-    url: http://bitbucket.org/jekyll
+    url: https://bitbucket.org/mr-martinsosa/
   - title: github
-    url: http://github.com/jekyll
+    url: http://github.com/mr-martinsosa
 
 # Postal address (add as many lines as necessary)
 address:
